<resources xmlns:xsl="http://schemas.android.com/tools">

    <string name="action_settings">Settings</string>

    <!-- タイトル -->
    <string name="app_name">健活アプリ</string>
    <string name="name_selectsheet_product">ユーザ一覧画面</string>
    <string name="name_selectsheet_listview">ユーザ選択画面</string>
    <string name="name_selectsheet_tabel">トレーニングの履歴</string>
    <string name="name_menu_select">メニュー一覧</string>
    <string name="name_training_select">トレーニングメニュー一覧</string>
    <string name="name_main_user">ユーザ登録画面</string>
    <string name="name_video_select">コース選択画面</string>
    <string name="name_update_user">ユーザ情報更新</string>
    <string name="dictionary">健康辞書</string>
    <string name="search">検索</string>
    <string name="twitter_login">twitterログイン画面</string>


    <!-- ここからactivity_main 01関連 -->
    <string name="text01_name">名前</string>
    <string name="text01_age">生年\n月日</string>
    <string name="text01_height">身長</string>
    <string name="text01_weight">体重</string>
    <string name="text01_sex">性別</string>
    <!-- 選択用RadioButton -->
    <string name="radio01_man">男性</string>
    <string name="radio01_woman">女性</string>
    <string name="text01_kome">※</string>
    <string name="text01_hinttext">全角・半角12文字以内</string>
    <string name="text01_hintnumber">半角数字</string>
    <string name="button01_regist">登録</string>
    <string name="button01_show">表示</string>
    <string name="button01_cancel">キャンセル</string>

    <!-- 選択用RadioButton -->
    <string name="radio01_product">ユーザ一覧 (ListView×ArrayAdapter)</string>
    <string name="radio01_listview">ListView表示 (ListView×BaseAdapter)</string>
    <string name="radio01_tablelayout">TableLayout表示</string>
    <!-- ここまで -->

    <!-- ここからselect_sheet_product 02関連 -->
    <!-- select_sheet_product 02 -->
    <string name="text02_title_detail">ListViewを表示する為にArrayAdapterを使ってシンプルに品名だけをリスト表示します。</string>
    <string name="text02_title">ユーザ一覧</string>
    <string name="button02_all_delete">全削除</string>

    <!-- row_sheet_listview 05 -->
    <string name="text05_title_age">年齢：</string>
    <string name="text05_title_sex">性別：</string>
    <string name="text05_title_height">身長：</string>
    <string name="text05_title_weight">体重：</string>
    <string name="text05_title_login">twitter最終ログイン：</string>


    <string name="text05_title_date">日時：</string>
    <string name="text05_title_heart_rate">心拍数：</string>
    <string name="text05_title_calorie_consumption">消費カロリー：</string>
    <string name="text05_title_total_time">総走行時間：</string>
    <string name="text05_title_total_total_distance">総走行距離：</string>
    <string name="text05_title_course_name">コース名：</string>
    <string name="text05_title_time">タイム：</string>
    <string name="text05_title_avg_speed">平均速度：</string>
    <string name="text05_title_max_speed">最高速度：</string>
    <string name="text05_title_distance">走行距離：</string>
    <string name="text05_title_bmi">BMI：</string>
    <string name="text05_title_training_name">トレーニング名：</string>

    <!-- ここまで -->

    <!-- select_sheet_listview 03 -->
    <string name="text03_title_detail">トレーニングするユーザを選んでください。</string>

    <!-- select_sheet_table 04 -->
    <string name="text04_title_detail">いままでのトレーニングの結果を閲覧できます。</string>
    <string name="text04_hinttext">ユーザを入力して下さい。</string>
    <string name="button04_search">検索</string>

    <!-- VideoPlay  -->
    <string name="dummy_button">DUMMY BUTTON</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- USB contents -->
    <string name="usb_name">Basic Accessory Demo</string>
    <string name="pot_header">Potentiometer</string>
    <string name="pole_header">Pole value</string>
    <string name="weblink">www.microchip.com/android</string>
    <string name="error_default">An unknown error has occurred.  Please contact androidsupport@microchip.com so that we can determine the source of the issue and attempt to fix it.</string>
    <string name="error_missing_open_accessory_framework">The Android OS version that you are running is missing the com.android.future.usb library that is required to run this demo.  The OS version that you are running should contain these libraries.  Please contact androidsupport@microchip.com so that we can work to correct this issue for this device. </string>
    <string name="error_firmware_protocol">The firmware version on the attached device requires a protocol that is not supported by this version of the application.  Please check the Android Marketplace to see if there is an update available for this application.  If you are using the source version, please check www.microchip.com/mal for the latest application source code.</string>

    <string-array name="year_planets_array">
        <item>2016</item>

    </string-array>


    <string-array name="month_planets_array">
        <item>選択なし</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>
    <string-array name="day_planets_array">
        <item>選択なし</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

</resources>