<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="4dp">

    <!-- 名前 -->
    <TextView
        android:id="@+id/text05Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- タイトル：年齢 -->
        <TextView
            android:id="@+id/text05Heart_rate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text05_title_age"
            android:textSize="14sp" />

        <!-- データ表示用：年齢 -->
        <TextView
            android:id="@+id/text05Calorie_consumption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:textColor="#000000"
            android:textSize="14sp" />

        <!-- タイトル：身長 -->
        <TextView
            android:id="@+id/text05Weight_fluctuates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text05_title_height"
            android:textSize="14sp" />

        <!-- データ表示用：身長 -->
        <TextView
            android:id="@+id/text05Total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textColor="#000000"
            android:textSize="14sp" />

        <!-- タイトル：体重 -->
        <TextView
            android:id="@+id/text05Total_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/text05_title_weight"
            android:textSize="14sp" />

        <!-- データ表示用：体重 -->
        <TextView
            android:id="@+id/text05Weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:textColor="#000000"
            android:textSize="14sp" />

        </LinearLayout>
</LinearLayout>